--- a/src/components/PasswordManager/index.css
+++ b/src/components/PasswordManager/index.css
@@ -279,6 +279,22 @@
   min-width: 100%;
 }
 
+.show-password-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+}
+.check-box {
+  width: 18px;
+  height: 18px;
+}
+
+.text {
+  font-family: 'Roboto';
+  font-size: 18px;
+  color: #ffffff;
+}
+
 .no-password-container {
   display: flex;
   flex-direction: column;
