--- a/src/components/PasswordManager/index.css
+++ b/src/components/PasswordManager/index.css
@@ -158,6 +158,8 @@
   border-radius: 3px;
   margin-left: auto;
   font-weight: 500;
+  cursor: pointer;
+  outline: none;
 }
 @media screen and (min-width: 768px) {
   .add-btn {
@@ -304,4 +306,12 @@
 }
 .no-password-img {
   width: 50%;
+}
+.saved-password-list {
+  list-style-type: none;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+  padding: 0px;
 }
