--- a/src/components/PasswordManager/index.css
+++ b/src/components/PasswordManager/index.css
@@ -315,3 +315,17 @@
   flex-wrap: wrap;
   padding: 0px;
 }
+
+.designed {
+  color: #ffffff;
+  display: flex;
+  font-size: 15px;
+  font-weight: bold;
+  font-family: 'Roboto';
+}
+
+.link {
+  color: #b91c1c;
+  font-weight: 800;
+  padding-left: 10px;
+}
